brat/test/golden/imports/non-existent1.brat.golden
Error in non-existent1@1:16
import lib (x, a)
               ^

  Symbol `a` not found in `lib`

